--- a/Display/Transport.xaml
+++ b/Display/Transport.xaml
@@ -36,12 +36,13 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0" HorizontalAlignment="Left">
-                        <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"/>
+                        <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"
+                                   Foreground="{Binding TransportDate, Converter={StaticResource DateTimeToDayOfWeekBrushConverter}, FallbackValue=#888888}" Opacity="0.8"/>
                     </Grid>
                 <Grid Grid.Column="1" HorizontalAlignment="Right">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="担当者選択" Style="{StaticResource TextDateLeft}" Margin="0,0,20,5"/>
-                        <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280" Margin="0,0,0,-5" Padding="10,5,10,5" Foreground="#555555">
+                        <ComboBox Grid.Row="0" Text="{Binding Worker}" ItemsSource="{Binding Workers}" HorizontalAlignment="Right" Width="280" Margin="0,0,0,-5" Padding="10,5,10,5" Opacity="0.8">
                             <i:Interaction.Behaviors>
                                 <local:ComboBoxBehavior/>
                             </i:Interaction.Behaviors>
