--- a/Display/TransportList.xaml
+++ b/Display/TransportList.xaml
@@ -5,9 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-      xmlns:local="clr-namespace:Display" d:DataContext="{d:DesignInstance Type=local:ViewModelTransportList}"
-      mc:Ignorable="d" d:DesignWidth="1160" d:DesignHeight="680"
-      FontSize="30" FontFamily="Meiryo UI">
+      xmlns:local="clr-namespace:Display" d:DataContext="{d:DesignInstance Type=local:ViewModelTransportHistory}"
+      mc:Ignorable="d" d:DesignWidth="1160" d:DesignHeight="680" 
+      FontSize="35" FontFamily="Meiryo UI">
     <!-- イベント -->
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -16,6 +16,10 @@
     </i:Interaction.Triggers>
     <!-- 画面表示 -->
     <Grid>
+        <Grid.Resources>
+            <FrameworkElement x:Key="proxyElement" />
+        </Grid.Resources>
+        <ContentControl Visibility="Collapsed" Content="{StaticResource proxyElement}" />
         <Grid Background="#FFFFFF">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -24,8 +28,14 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="560"/>
             </Grid.RowDefinitions>
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="{Binding TransportDate,Converter={StaticResource DateTimeConverter},FallbackValue=2024年7月21日}" Style="{StaticResource TextDate}"/>
+                </Viewbox>
+            </StackPanel>
             <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                       ColumnHeaderStyle="{StaticResource DefultHeader}">
+                <!-- 項目設定 -->
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="ロット番号" Width="200">
                         <DataGridTemplateColumn.CellTemplate>
@@ -37,7 +47,7 @@
                     <DataGridTemplateColumn Header="品番" Width="300*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 品番}" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{Binding 品番}" HorizontalAlignment="Left" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -48,24 +58,24 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="重量" Width="150">
+                    <DataGridTemplateColumn Header="重量" Width="180" >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding 数量,Converter={StaticResource CurrencyConverter}}" HorizontalAlignment="Right"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="担当者" Width="200">
+                    <DataGridTemplateColumn Header="担当者" Width="180">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 作業者}" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{Binding 引取者}" HorizontalAlignment="Left"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn Header="" Width="50">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding 完了}" HorizontalAlignment="Center" FontWeight="Bold" Foreground="{Binding 完了,Converter={StaticResource CheckColorConverter}}"/>
+                                <TextBlock Text="{Binding 完了, Converter={StaticResource CompletedConverter}}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Foreground="{Binding 仕掛区分,Converter={StaticResource ProcessColorConverter}}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
