--- a/Display/InProcessList .xaml
+++ b/Display/InProcessList .xaml
@@ -96,7 +96,7 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
                 <i:Interaction.Behaviors>
-                    <local:DataGridBehavior/>
+                    <local:DataGridBehavior Iselect="{Binding Iselect}"/>
                 </i:Interaction.Behaviors>
             </DataGrid>
         </Grid>
