--- a/Display/ManufactureList.xaml
+++ b/Display/ManufactureList.xaml
@@ -78,7 +78,7 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
                 <i:Interaction.Behaviors>
-                    <local:DataGridBehavior/>
+                    <local:DataGridBehavior Iselect="{Binding Iselect}"/>
                 </i:Interaction.Behaviors>
             </DataGrid>
         </Grid>
