--- a/Display/PlanList.xaml
+++ b/Display/PlanList.xaml
@@ -139,7 +139,7 @@
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                     <i:Interaction.Behaviors>
-                        <local:DataGridBehavior/>
+                        <local:DataGridBehavior Iselect="{Binding Iselect}"/>
                     </i:Interaction.Behaviors>
                 </DataGrid>
             </Grid>
