--- a/Display/SlipIssue.xaml
+++ b/Display/SlipIssue.xaml
@@ -16,78 +16,112 @@
     </i:Interaction.Triggers>
     <!-- 画面表示 -->
     <Grid>
-        <Grid Background="#F9F9F9" Margin="0,0,0,20">
-            <Grid.Resources>
-                <FrameworkElement x:Key="proxyElement" />
-            </Grid.Resources>
-            <ContentControl Visibility="Collapsed" Content="{StaticResource proxyElement}" />
-            <Grid Background="#FFFFFF" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="560"/>
-                </Grid.RowDefinitions>
-                <Grid Grid.Column="0" Grid.Row="0" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="900*"/>
-                        <ColumnDefinition Width="260"/>
-                    </Grid.ColumnDefinitions>
-                </Grid>
-                <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
-                          ColumnHeaderStyle="{StaticResource DefultHeader}">
-                    <!-- 項目設定 -->
-                    <DataGrid.Columns>
-                        <DataGridTemplateColumn Header="ロット番号" Width="200">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding ロット番号}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="品番" Width="300*">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 品番}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="形状" Width="90">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding 形状}" HorizontalAlignment="Center"/>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="ロット数" Width="120">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 計画数,Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="600"/>
+            <RowDefinition Height="30*"/>
+        </Grid.RowDefinitions>
+        <!-- 表示 -->
+        <Grid Grid.Row="0" Background="#D7DCDE" Height="590">
+            <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+                    <!-- 左領域 -->
+                    <Grid Margin="40,40,0,40" HorizontalAlignment="Left">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="360"/>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="360"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="80"/>
+                            <RowDefinition Height="100"/>
+                            <RowDefinition Height="70"/>
+                            <RowDefinition Height="70"/>
+                            <RowDefinition Height="70"/>
+                            <RowDefinition Height="140"/>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0" Grid.Column="0">
+                            <TextBlock Text="ロット番号" FontSize="35"/>
+                        </Grid>
+                        <Viewbox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Style="{StaticResource Label}" Margin="10,10,10,10">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding LotNumber, FallbackValue=202501-001}" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding LotNumberSEQ, Converter={StaticResource CircleEnclosingConverter}, FallbackValue=①}" FontWeight="Bold" Margin="20,0,0,0"/>
 
-                        
-                        
-                        
-                        
-                        
-                        
-                        
-                        
-                        
-
-                    </DataGrid.Columns>
-                    <i:Interaction.Behaviors>
-                        <local:DataGridBehavior/>
-                    </i:Interaction.Behaviors>
-                </DataGrid>
-            </Grid>
+                            </StackPanel>
+                        </Viewbox>
+                        <Grid Grid.Row="0" Grid.Column="3" Margin="0,10,0,0">
+                            <ItemsControl ItemsSource="{Binding PageTable}" IsTabStop="False">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <WrapPanel Orientation="Horizontal">
+                                            <Border CornerRadius="2" BorderThickness="1" BorderBrush="{Binding ボーダー色}">
+                                                <TextBlock Text="{Binding 仕上記号}" Width="150" Height="50" VerticalAlignment="Center" TextAlignment="Center" Background="{Binding 色}" Foreground="{Binding 文字色}" FontSize="30" Padding="0,5,0,0"/>
+                                            </Border>
+                                        </WrapPanel>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </Grid>
+                        <Grid Grid.Row="1" Grid.Column="0">
+                            <TextBlock Text="品 番" FontSize="35"/>
+                        </Grid>
+                        <Viewbox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <TextBlock Text="{Binding ProductName, FallbackValue=MH024000}" FontWeight="Bold"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="ロット数"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="2" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <TextBlock Text="{Binding PlanNumber, Converter={StaticResource CurrencyConverter}, FallbackValue=1000}" FontWeight="Bold"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="2" Grid.Column="2" Style="{StaticResource Label}">
+                            <TextBlock Text="鉄 板"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="2" Grid.Column="3" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding ShirringUnit, FallbackValue=1}" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding Unit}" FontWeight="Bold" Margin="10,0,0,0"/>
+                            </StackPanel>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="粉 種"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="1" Style="{StaticResource Label}">
+                            <TextBlock Text="{Binding PowderType}" FontWeight="Bold"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="2" Style="{StaticResource Label}">
+                            <TextBlock Text="鉄 種"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="3" Style="{StaticResource Label}">
+                            <TextBlock Text="{Binding IronType}" FontWeight="Bold"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="規 格"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="1" Style="{StaticResource Label}">
+                            <TextBlock Text="{Binding Measurement, FallbackValue=4.3×89×2445}" FontWeight="Bold"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="2" Style="{StaticResource Label}">
+                            <TextBlock Text="コイル重量"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="3" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding CoilWeight,Converter={StaticResource CurrencyConverter}, FallbackValue=100}" FontWeight="Bold"/>
+                                <TextBlock Text="kg" FontWeight="Bold" Margin="10,0,0,0" Visibility="{Binding VisibleWeight,Converter={StaticResource CollapsedConverter}}"/>
+                            </StackPanel>
+                        </Viewbox>
+                        <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" VerticalAlignment="Top" Margin="0,60,0,0">
+                            <TextBlock Text="※この現品票は製造課仕上にて加工上、複数ロットに分割した為発行したものです。" FontWeight="Bold"  FontSize="30" Foreground="#FF0000"/>
+                        </Grid>
+                    </Grid>
+                </StackPanel>
+            </StackPanel>
         </Grid>
     </Grid>
 </UserControl>
