--- a/Display/TransportList.xaml
+++ b/Display/TransportList.xaml
@@ -81,7 +81,7 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
                 <i:Interaction.Behaviors>
-                    <local:DataGridBehavior/>
+                    <local:DataGridBehavior Iselect="{Binding Iselect}"/>
                 </i:Interaction.Behaviors>
             </DataGrid>
         </Grid>
