--- a/Display/Print/SlipCompletion.xaml
+++ b/Display/Print/SlipCompletion.xaml
@@ -127,7 +127,15 @@
                         <TextBlock Text="{Binding Unit, FallbackValue=枚}" TextAlignment="Center" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="5,23,15,5"/>
                     </StackPanel>
                 </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
+                <Grid Height="120">
+                    <TextBlock Width="263" Height="60" Margin="0,3,0,0">
+                        <LineBreak/>
+                        <Run Text="この現品票は製造課仕上にて加工上"/>
+                        <LineBreak/>
+                        <Run Text="複数ロットに分割した為発行したものです。"/>
+                    </TextBlock>
+                </Grid>
+                <Border BorderThickness="0,1,1,1" BorderBrush="#000000">
                     <Grid HorizontalAlignment="Right" Width="40">
                         <Border BorderThickness="1,0,0,0" BorderBrush="#000000">
                             <StackPanel Orientation="Vertical" Margin="0,2,0,2">
@@ -136,130 +144,6 @@
                             </StackPanel>
                         </Border>
                     </Grid>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="35">
-                        <StackPanel Orientation="Vertical" VerticalAlignment="Bottom" Width="80" Margin="5,0,0,5">
-                            <TextBlock Text="鉄板準備完了" FontFamily="BIZ UD明朝 Medium" FontSize="13"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Width="197" VerticalAlignment="Bottom" Margin="0,0,0,5">
-                            <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                        </StackPanel>
-                        <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="35">
-                        <StackPanel Orientation="Vertical" VerticalAlignment="Bottom" Width="80" Margin="5,0,0,5">
-                            <TextBlock Text="一次焼結完了" FontFamily="BIZ UD明朝 Medium" FontSize="13" />
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Width="197" VerticalAlignment="Bottom" Margin="0,0,0,5">
-                            <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                        </StackPanel>
-                        <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="45">
-                        <StackPanel Orientation="Vertical" VerticalAlignment="center" Width="80" Margin="5,5,0,5">
-                            <Grid>
-                                <UniformGrid Rows="1">
-                                    <TextBlock Text="圧" FontFamily="BIZ UD明朝 Medium" FontSize="13" HorizontalAlignment="Left"/>
-                                    <TextBlock Text="延" FontFamily="BIZ UD明朝 Medium" FontSize="13" HorizontalAlignment="Center"/>
-                                    <TextBlock Text="完" FontFamily="BIZ UD明朝 Medium" FontSize="13" HorizontalAlignment="Center"/>
-                                    <TextBlock Text="了" FontFamily="BIZ UD明朝 Medium" FontSize="13" HorizontalAlignment="Center"/>
-                                    <TextBlock Text="①" FontFamily="BIZ UD明朝 Medium" FontSize="13" HorizontalAlignment="Center"/>
-                                </UniformGrid>
-                            </Grid>
-                            <TextBlock Text="再圧延完了②" TextAlignment="Left" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="0,8,0,0"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Height="45">
-                            <StackPanel Orientation="Horizontal" Width="197" Margin="0,5,0,8">
-                                <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                                <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Width="197" Margin="0,1,0,0">
-                                <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                                <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            </StackPanel>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Height="45">
-                            <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,5,0,5"/>
-                            <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,4,0,5"/>
-                        </StackPanel>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="45">
-                        <StackPanel Orientation="Vertical" VerticalAlignment="Bottom" Width="80" Margin="5,0,0,5">
-                            <TextBlock Text="二次焼結完了" FontFamily="BIZ UD明朝 Medium" FontSize="13" />
-                            <Grid Width="80" Margin="0,8,0,0">
-                                <UniformGrid Rows="1">
-                                    <TextBlock Text="焼" FontFamily="BIZ UD明朝 Medium" FontSize="13"/>
-                                    <TextBlock Text="鈍" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="3,0,0,0"/>
-                                    <TextBlock Text="完" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="5,0,0,0"/>
-                                    <TextBlock Text="了" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="5,0,0,0"/>
-                                </UniformGrid>
-                            </Grid>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Height="45">
-                            <StackPanel Orientation="Horizontal" Width="197" Margin="0,5,0,8">
-                                <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                                <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Width="197" Margin="0,1,0,0">
-                                <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                                <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            </StackPanel>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Height="45">
-                            <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,5,0,5"/>
-                            <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,4,0,5"/>
-                        </StackPanel>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="35">
-                        <Grid Width="80" VerticalAlignment="Bottom" Margin="5,0,0,5">
-                            <UniformGrid Rows="1">
-                                <TextBlock Text="素" FontFamily="BIZ UD明朝 Medium" FontSize="13"/>
-                                <TextBlock Text="材" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="3,0,0,0"/>
-                                <TextBlock Text="完" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="6,0,0,0"/>
-                                <TextBlock Text="了" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="6,0,0,0"/>
-                            </UniformGrid>
-                        </Grid>
-                        <StackPanel Orientation="Horizontal" Width="197" VerticalAlignment="Bottom" Margin="0,0,0,5">
-                            <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                        </StackPanel>
-                        <TextBlock Text="{Binding Unit, FallbackValue=枚}" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
-                </Border>
-                <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
-                    <StackPanel Orientation="Horizontal" Height="35">
-                        <Grid Width="80" VerticalAlignment="Bottom" Margin="5,0,0,5">
-                            <UniformGrid Rows="1"  >
-                                <TextBlock Text="プ" FontFamily="BIZ UD明朝 Medium" FontSize="13"/>
-                                <TextBlock Text="レ" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="2,0,0,0"/>
-                                <TextBlock Text="ス" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="2,0,0,0"/>
-                                <TextBlock Text="完" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="2,0,0,0"/>
-                                <TextBlock Text="了" FontFamily="BIZ UD明朝 Medium" FontSize="13" Margin="2,0,0,0"/>
-                            </UniformGrid>
-                        </Grid>
-                        <StackPanel Orientation="Horizontal" Width="197" VerticalAlignment="Bottom" Margin="0,0,0,5">
-                            <TextBlock Text="月" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                            <TextBlock Text="日" FontFamily="BIZ UD明朝 Medium" FontSize="13" Padding="45,0,0,0"/>
-                        </StackPanel>
-                        <TextBlock Text="ケ" FontFamily="BIZ UD明朝 Medium" FontSize="13" Width="18" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
-                        <Border BorderThickness="1,0,0,0" BorderBrush="#000000"/>
-                    </StackPanel>
                 </Border>
                 <Border BorderThickness="0,0,1,1" BorderBrush="#000000">
                     <StackPanel Orientation="Horizontal" Height="35">
@@ -290,13 +174,7 @@
                         </StackPanel>
                     </StackPanel>
                 </Border>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="263" Height="60" Margin="0,3,0,0">
-                        <LineBreak/>
-                        <Run Text="この現品票は製造課仕上にて加工上"/>
-                        <LineBreak/>
-                        <Run Text="複数ロットに分割した為発行したものです。"/>
-                    </TextBlock>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Image Source="{Binding Barcode}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="80" Height="60" Margin="0,3,0,0"/>
                 </StackPanel>
             </StackPanel>
