--- a/Display/PackSpecification.xaml
+++ b/Display/PackSpecification.xaml
@@ -34,17 +34,16 @@
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="70"/>
-                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="70"/>
                             <RowDefinition Height="90"/>
                             <RowDefinition Height="20"/>
                             <RowDefinition Height="70"/>
-                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="70"/>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="100"/>
                         </Grid.RowDefinitions>
-                        
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="品　番" FontSize="40"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="品　番" FontSize="48" HorizontalAlignment="Center" Margin="-15,0,0,0"/>
                         <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" x:Name="TextProductName" Text="{Binding ProductName, FallbackValue=MH024000}" Width="480" Padding="5,5,5,5"
                                  materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LengthProductName}" InputMethod.IsInputMethodEnabled="False" FontSize="40">
                             <TextBox.Resources>
@@ -67,7 +66,7 @@
                         </TextBox>
                         <Grid Grid.Row="2" Grid.Column="0" >
                             <Border Style="{StaticResource BorderLabel}">
-                                <TextBlock Text="容 器" Style="{StaticResource TextLabel}"/>
+                                <TextBlock Text="容　器" Style="{StaticResource TextLabel}"/>
                             </Border>
                         </Grid>
                         <TextBlock Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding ContainerCategory, FallbackValue=段ボール・ポリ箱}" FontSize="40"/>
@@ -76,16 +75,21 @@
                                 <TextBlock Text="梱包仕様" Style="{StaticResource TextLabel}"/>
                             </Border>
                         </Grid>
-                        <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Container, FallbackValue=青箱 大}" FontSize="60"/>
-                        <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Carton, FallbackValue=99}" HorizontalAlignment="Right" FontSize="60" Margin="0,0,20,0"/>
-                        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="個" FontSize="40" VerticalAlignment="Center" Margin="0,20,0,2"/>
+                        <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Container, FallbackValue=青箱 大}" FontSize="55"/>
+                        <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Carton, FallbackValue=99}" HorizontalAlignment="Right" FontSize="55" Margin="10,0,10,0"/>
+                        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="個" FontSize="30" VerticalAlignment="Center" Margin="0,20,0,2"/>
                         <Grid Grid.Row="5" Grid.Column="0" >
                             <Border Style="{StaticResource BorderLabel}">
                                 <TextBlock Text="パレット" Style="{StaticResource TextLabel}"/>
                             </Border>
                         </Grid>
-                        <TextBlock Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Palette, FallbackValue=折パレ}" FontSize="33"/>
-                        <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding ContainerComment}" FontSize="33"/>
+                        <TextBlock Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Palette, FallbackValue=折パレ}" FontSize="28"/>
+                        <Grid Grid.Row="6" Grid.Column="0">
+                            <Border Style="{StaticResource BorderLabel}" Margin="0,10,0,0">
+                                <TextBlock Text="メ　モ" Style="{StaticResource TextLabel}"/>
+                            </Border>
+                        </Grid>
+                        <TextBlock Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4" Text="{Binding ContainerComment}" FontSize="28" Margin="0,10,0,0"/>
                         <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Left" Orientation="Horizontal">
                             <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory1" Visibility="{Binding VisibileButton1, Converter={StaticResource CollapsedConverter}}">
                                 <Viewbox Style="{StaticResource Button}">
