--- a/Display/SlipIssue.xaml
+++ b/Display/SlipIssue.xaml
@@ -47,7 +47,29 @@
                         </Grid>
                         <Viewbox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Style="{StaticResource Label}">
                             <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                                <TextBlock Text="{Binding LotNumber, FallbackValue=202501-001}" FontWeight="Bold"/>
+                                <TextBox x:Name="TextLotNumber" Text="{Binding LotNumber, UpdateSourceTrigger=PropertyChanged}" Width="250"
+                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LengthLotNumber}" InputMethod.IsInputMethodEnabled="False">
+                                    <TextBox.Resources>
+                                        <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding FocusLotNumber}" Value="True">
+                                                    <Setter Property="FocusManager.FocusedElement" Value="{Binding ElementName=TextLotNumber}"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBox.Resources>
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="GotFocus">
+                                            <i:InvokeCommandAction Command="{Binding GotFocus}" CommandParameter="LotNumber"/>
+                                        </i:EventTrigger>
+                                        <i:EventTrigger EventName="LostFocus">
+                                            <i:InvokeCommandAction Command="{Binding LostFocus}" CommandParameter="LotNumber"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <i:Interaction.Behaviors>
+                                        <local:TextBoxBehavior Mode="Hyphen"/>
+                                    </i:Interaction.Behaviors>
+                                </TextBox>
                                 <TextBlock Text="{Binding LotNumberSEQ, Converter={StaticResource CircleEnclosingConverter}, FallbackValue=①}" FontWeight="Bold" Margin="20,0,0,0"/>
                             </StackPanel>
                         </Viewbox>
